Fix bug flicker trigg image. Move url js to css.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,7 +149,8 @@ span.correct {
   background-repeat: no-repeat;
   background-size: contain;
   background-color: #e9f0f2;
-}
+  background-image: url("../images/hi.png");
+  }
 
 .bg--paws {
   background: url("../images/paws3.png");
